[package]
name = "rp_bno055"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
rp2040-boot2 = "0.2.1"
rp2040-hal = { version = "0.8.0", features = ["rt", "critical-section-impl"] }
cortex-m-rt = "0.7.1"
embedded-time = "0.12.1"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.2"
futures = { version = "0.3.21", default-features = false }
rp-pico = "0.7.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
panic-halt = "0.2.0"

[[bin]]
name = "led"
path = "src/led.rs"

[[bin]]
name = "led_timer"
path = "src/led_timer.rs"

[[bin]]
name = "serial_hello"
path = "src/serial_hello.rs"