[package]
name = "rp_bno055"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
rp2040-boot2 = "0.2.1"
rp2040-hal = { version = "0.8.0", features = ["rt", "critical-section-impl"] }
cortex-m-rt = "0.7.1"
embedded-time = "0.12.1"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.2"
futures = { version = "0.3.21", default-features = false }
rp-pico = "0.7.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
panic-halt = "0.2.0"
numtoa = "0.2.4"
serial_write = "0.1"
fugit = "0.3.6"
bno055 = { git = "https://github.com/eupn/bno055", rev = "58970ced667deddd09933954b1a928587226daf7" }

[[bin]]
name = "led"
path = "src/led.rs"

[[bin]]
name = "led_timer"
path = "src/led_timer.rs"

[[bin]]
name = "serial_hello"
path = "src/serial_hello.rs"

[[bin]]
name = "serial_hello_numtoa"
path = "src/serial_hello_numtoa.rs"

[[bin]]
name = "serial_hello_count"
path = "src/serial_hello_count.rs"

[[bin]]
name = "imu_base"
path = "src/imu_base.rs"

[[bin]]
name = "imu_const"
path = "src/imu_const.rs"

[[bin]]
name = "imu_save"
path = "src/imu_save.rs"

[[bin]]
name = "imu_save_plot"
path = "src/imu_save_plot.rs"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat' # <-- HERE
opt-level = 3
overflow-checks = false